--- a/Containers/vector.ipynb
+++ b/Containers/vector.ipynb
@@ -243,6 +243,7 @@
     "int main() {\n",
     "  /**************** std::vector::insert *****************/\n",
     "  // The vector is extended by inserting new elements before the element at the specified position, effectively increasing the container size by the number of elements inserted.\n",
+    "  // Returns an iterator that points to the first of the newly inserted elements.\n",
     "  // http://www.cplusplus.com/reference/vector/vector/insert/\n",
     "  // 5 TYPES:\n",
     "  \n",
