--- a/Others/iterator.ipynb
+++ b/Others/iterator.ipynb
@@ -109,6 +109,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Iterator operations:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```C++\n",
+    "#include <iostream>     // std::cout\n",
+    "#include <iterator>     // std::advance\n",
+    "#include <list>         // std::list\n",
+    "using namespace std;\n",
+    "\n",
+    "int main () {\n",
+    "  list<int> mylist;\n",
+    "  for (int i=0; i<10; i++) mylist.push_back (i*10);\n",
+    "\n",
+    "  list<int>::iterator it = mylist.begin();\n",
+    "\n",
+    "  advance (it,5); // Advances the iterator it by n element positions.\n",
+    "\n",
+    "  cout << \"The sixth element in mylist is: \" << *it << '\\n';\n",
+    "\n",
+    "  return 0;\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "The sixth element in mylist is: 50"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
